@@ -313,31 +313,32 @@ UL  {
      /*    list-style: url("images/tux-bullet.png") disc; */
     }
 
-#namespaces {
+.namespaces {
 	border: 1px solid black;
 }
 
-#namespaces td {
+.namespaces td {
 	padding:	0.2em 1em;
 	/* font-weight: bold; */
 }
 
-#namespaces thead {
+.namespaces thead {
 	background-color: #aaf;
 }
 
-#namespaces tr.init {
+.namespaces tr.init {
 	background-color: #e88;	
 }
 
-#namespaces tr.childinit {
+.namespaces tr.childinit {
 	background-color: #eee;		
 }
 
-#namespaces tr.processing {
+.namespaces tr.processing {
 	background-color: #e88;	
-}	
-#namespaces tr.childexit {
+}
+	
+.namespaces tr.childexit {
 	background-color: #eee;		
 }
 
